DTSCCI-5038 Adding BPMN config and skipping AAT HLD